--- a/booking-service.properties
+++ b/booking-service.properties
@@ -5,3 +5,5 @@ management.security.enabled=false
 server.port=8083
 
 coupon.code=HYD15OFF
+
+fare-service.ribbon.listOfServers=localhost:8082, localhost:9082, localhost:1082
