--- a/booking-service.properties
+++ b/booking-service.properties
@@ -6,4 +6,4 @@ server.port=8083
 
 coupon.code=HYD15OFF
 
-search-service.ribbon.listOfServers=http://localhost:8082 , http://localhost:9082 , http://localhost:1082
+search-proxy.ribbon.listOfServers=http://localhost:8082 , http://localhost:9082 , http://localhost:1082
