--- a/booking-service.properties
+++ b/booking-service.properties
@@ -7,3 +7,9 @@ server.port=8083
 coupon.code=HYD15OFF
 
 search-proxy.ribbon.listOfServers=http://localhost:8082 , http://localhost:9082 , http://localhost:1082
+
+
+
+spring.boot.admin.client.url=http://localhost:8093
+spring.boot.admin.client.username=admin
+spring.boot.admin.client.password=admin
