--- a/search-service.properties
+++ b/search-service.properties
@@ -1,4 +1,4 @@
-
+spring.cloud.config.uri=http://localhost:8888 
 
 spring.rabbitmq.addresses=amqp://wolsyxej:L7rGED4yQIW9fGS-tiRKNKsGu0pTXlpQ@finch.rmq.cloudamqp.com/wolsyxej
 
