--- a/booking-service.properties
+++ b/booking-service.properties
@@ -6,7 +6,7 @@ server.port=8083
 
 coupon.code=HYD15OFF
 
-search-service.ribbon.listOfServers=http://localhost:8082 , http://localhost:9082 , http://localhost:1082
-search-service.ribbon.OkToRetryOnAllOperations=false
+search-service.ribbon.listOfServers=localhost:8082, localhost:9082, localhost:1082
+#search-service.ribbon.OkToRetryOnAllOperations=false
 
 
