--- a/application.properties
+++ b/application.properties
@@ -17,8 +17,10 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.boot.admin.client.url=http://localhost:8093
+spring.boot.admin.client.instance.service-base-url=http://localhost:8093
 spring.boot.admin.client.username=admin
 spring.boot.admin.client.password=admin
+
 
 name=Praveen
 
