--- a/booking-service.properties
+++ b/booking-service.properties
@@ -6,4 +6,4 @@ coupon.code=HYD15OFF
 
 search-service.ribbon.listOfServers=localhost:8082, localhost:9082, localhost:1082
 
-
+eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
