--- a/search-service.properties
+++ b/search-service.properties
@@ -3,5 +3,7 @@ spring.rabbitmq.addresses=amqp://wolsyxej:L7rGED4yQIW9fGS-tiRKNKsGu0pTXlpQ@finch
 originairports.shutdown=HYDEARABAD,PUNE
 destinationairports.shutdown=HYDERABAD
 
+eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
+
 
 
